--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,8 +3,12 @@ aiohttp==2.0.7
 async-timeout==1.2.0
 chardet==3.0.2
 httptools==0.0.9
+Jinja2==2.9.6
+MarkupSafe==1.0
 multidict==2.1.4
 sanic==0.5.1
+sanic-jinja2==0.5.1
+sanic-session==0.1.3
 ujson==1.35
 uvloop==0.8.0
 websockets==3.3
