--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 aiofiles==0.3.1
 aiohttp==2.0.7
+appdirs==1.4.3
 async-timeout==1.2.0
 chardet==3.0.2
 httptools==0.0.9
 Jinja2==2.9.6
 MarkupSafe==1.0
 multidict==2.1.4
+packaging==16.8
+pyparsing==2.2.0
 sanic==0.5.1
 sanic-jinja2==0.5.1
 sanic-session==0.1.3
+six==1.10.0
 ujson==1.35
 uvloop==0.8.0
 websockets==3.3
